# servermon

./: .gitignore  README.md  servermon.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-3.17/7.10.2/lib/x86_64-osx-ghc-7.10.2/servermon-0.1.0.0-BzRxO665O4xKUS1eyxfvLk/: Lib.hi  libHSservermon-0.1.0.0-BzRxO665O4xKUS1eyxfvLk-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.17/7.10.2/pkgdb/: package.cache  servermon-0.1.0.0-7c8c7f6c0c6024f54e84c1e9e6c53289.conf
app/: Main.hs
config/: servers.yaml.example
src/: Config.hs  Lib.hs  Monitor.hs
test/: Spec.hs
test/monitor/: Test.hs
