name:                servermon
version:             0.1.0.0
synopsis:            Application to monitor webservers
description:         Please see README.md
homepage:            http://github.com/blischalk/servermon#readme
license:             BSD3
license-file:        LICENSE
author:              Brett Lischalk
maintainer:          brett@brettlischalk.com
copyright:           2015 Brett Lischalk
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Lib
                     , Monitor
  build-depends:       ansi-terminal
                     , base >= 4.7 && < 5
                     , bytestring
                     , lens
                     , lens-aeson
                     , text
                     , wreq
                     , yaml
                     , yaml-config
  default-language:    Haskell2010

executable servermon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servermon
                     , wreq
                     , lens
                     , lens-aeson
                     , yaml
  default-language:    Haskell2010

test-suite servermon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servermon
                     , wreq
                     , lens
                     , lens-aeson
                     , yaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blischalk/servermon
